Fixed Sonar Qube Issues And Applied Spotless on All Files